5.0.0 -> 5.1a1:
    - jbj: chain poptcliAllPoptTable -> rpmioAllPoptTable, start removing dupes.
    - jbj: fsm: simplify fsm.c => rpmte.h dependency.
    - jbj: perl: fix: include rpmio.h before rpmlib.h (for rpmRC returns).
    - jbj: start creating I/O State Machine(IOSM) in rpmio/iosm.c.
    - jbj: verify.c: use rpmProblemGetAltNEVR() to make rpmProblem opaque.
    - jbj: fsm: use rpmfi iterators in several loops.
    - jbj: rpmfi: add rpmfiSetHeader() so verify.c doesn't need _RPMFI_INTERNAL.
    - jbj: rpmdav: refactor davOpendir et al on top of avOpendir.
    - jbj: handle (GNU-style) ar(1) long member names.
    - jbj: permit ar(1) payloads (file names are truncated atm).
    - jbj: rpmmg: fix: avoid false failure using <pcreposix.h>.
    - jbj: macro: use popt rather than getopt(3), get rid of POSIXLY_CORRECT.
    - jbj: rpmio: splint fiddles.
    - rpm.org: Rip ancient, unused setperms + unsetgid make targets.
    - rpm.org: Add %{sources} and %{patches} macros to build.
    - rpm.org: Remove some ancient dead code.
    - jbj: fix: eliminate librpmdb->librpm from dosetenv, use setenv(3) instead.
    - jbj: fix: rpmtsCheck non-zero return doesn't print failed build deps.
    - jbj: handle mireRegexec return change internal to rpm code.
    - jbj: mire: change mireRegexec() return: >=0 match, -1 nomatch, else error.
    - jbj: rpmgrep: start untwisting PCRE from rpmgrep (broken w/o PCRE atm).
    - jbj: rpmgrep: add --stats benchmark insturmentatian (patterns soonishly).
    - jbj: rpmdigest: add --stats benchmark insturmentation.
    - jbj: rpmio: add common --stats option.
    - proyvind: add some extra functionality to gendiff (ancient Mandriva patch by Chmouel Boudjnah)
    - pixel: do check free size when bavail is 0
    - jbj: add variadic checks, remove warnings.
    - jbj: refactor rpmcliErase to use same code as rpmtsInstall.
    - jbj: fix: rpmtsCheck non-zero return prevents --erase.
    - jbj: fix: avoid {pre,post}trans scrareMem assert failure.