@@ -62,6 +62,7 @@ LIBRPM_0
     rpmcliFtsPoptTable;
     rpmcliHashesCurrent;
     rpmcliHashesTotal;
+    rpmcliImportPubkey;
     rpmcliInit;
     rpmcliInstall;
     rpmcliInstallCheck;
@@ -349,7 +350,6 @@ LIBRPM_0
     rpmtsGetType;
     rpmtsGoal;
     rpmtsiNext;
-    rpmtsImportPubkey;
     rpmtsInitDB;
     rpmtsInitDSI;
     rpmtsInitIterator;
